<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="24dp"
    android:paddingVertical="12dp">

    <ImageView
        android:id="@+id/ivItemImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/Food_Image"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"
        android:background="@drawable/bg_impact_week_image_rounded_corner_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Food_Name"
        android:textColor="@color/font_primary"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toEndOf="@+id/ivItemImage"
        app:layout_constraintEnd_toStartOf="@+id/tvStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvItemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/Contribute_Time"
        android:textColor="@color/font_primary"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintStart_toEndOf="@+id/ivItemImage"
        app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/String"
        android:textColor="@color/primary_color"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintEnd_toStartOf="@+id/tvWeight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contribution_Amount"
        android:textColor="@color/primary_color"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>