<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AuthFragments.RegisterFragment">

    <ImageButton
        android:id="@id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back_button"
        android:contentDescription="@string/Back_Desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@id/authLogoTop"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_2"
        android:contentDescription="@string/Logo_Desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <TextView
        android:id="@+id/tvResetPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Reset_Password_Title"
        android:textSize="26sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authLogoTop" />

    <TextView
        android:id="@+id/tvResetPasswordGuide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/Reset_Guide"
        android:textSize="16sp"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResetPasswordTitle" />

    <EditText
        android:id="@+id/etEmailToReset"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/bg_input_field"
        android:hint="@string/Prompt_Email"
        android:inputType="textEmailAddress"
        android:paddingTop="4dp"
        android:paddingHorizontal="16dp"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_regular"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResetPasswordGuide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/Reset_Button"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_bold"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmailToReset" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/ResetNotifyFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>