<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".AuthActivity">

    <ImageView
        android:id="@+id/authLogoTop"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/Logo_Desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/logo_2" />

    <TextView
        android:id="@+id/tvSlogan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Slogan_1"
        android:textAlignment="center"
        android:textColor="@color/font_primary"
        android:textSize="22sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authLogoTop" />

    <TextView
        android:id="@+id/tvSlogan2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/Slogan_2"
        android:textAlignment="center"
        android:textColor="@color/font_primary"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSlogan1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnToLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="60dp"
        android:paddingVertical="6dp"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        app:backgroundTint="@color/primary_color"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSlogan2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnToSignUp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="60dp"
        android:paddingVertical="6dp"
        android:text="@string/Signup"
        android:textAllCaps="false"
        android:textColor="@color/primary_color"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnToLogin"
        app:strokeColor="@color/primary_color"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/ToS_Policy"
        android:textAlignment="center"
        android:textColor="@color/font_primary"
        android:textSize="12sp" android:layout_marginTop=""
        android:fontFamily="@font/default_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>